<?xml version="1.0"?>
<package format="3">
  <name>roboclaw_ros</name>
  <version>0.0.1</version>
  <description>Node for controlling RoboClaw motor controllers in ROS 2.</description>

  <maintainer email="audetb2@gmail.com">Benito</maintainer>
  <license>BSD</license>

  <!-- Build system dependencies -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Dependencies -->
  <depend>rclpy</depend>
  <depend>roboclaw_driver</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>

  <!-- Testing dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
